--- a/index.html
+++ b/index.html
@@ -3,21 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyPortfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <div class="header1">
-            <h1>MyPortfolio</h1>
-        </div>
-        <div class="icons">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Skills</a>
-            <a href="#">Projects</a>
-            <a href="#">Contact</a>
-        </div>
+
+<!-- Navbar -->
+<header class="navbar">
+    <div class="logo">MyPortfolio</div>
+    <nav>
+        <ul class="nav-links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+
+<!-- Hero -->
+<section class="hero" id="home">
+    <div class="hero-text">
+        <h1>Hello, I'm <span>Your Name</span></h1>
+        <p>Aspiring Web Developer | HTML, CSS, GitHub</p>
+        <button class="btn">Hire Me</button>
     </div>
+
+    <div class="hero-image">
+        <img src="https://i.imgur.com/0y8Ftya.png" alt="Profile">
+    </div>
+</section>
+
+<!-- About -->
+<section class="about" id="about">
+    <h2>About Me</h2>
+    <p>
+        I am a passionate Web Developer learning Frontend development with
+        HTML, CSS, and GitHub. I enjoy creating clean and responsive websites
+        and improving my skills every day.
+    </p>
+</section>
+
+<!-- Skills -->
+<section class="skills" id="skills">
+    <h2>My Skills</h2>
+    <div class="skill-box">
+        <span>HTML</span>
+        <span>CSS</span>
+        <span>Responsive Design</span>
+        <span>Git & GitHub</span>
+    </div>
+</section>
+
+<!-- Projects -->
+<section class="projects" id="projects">
+    <h2>Projects</h2>
+    <div class="project-cards">
+
+        <div class="card">
+            <h3>Portfolio Website</h3>
+            <p>Responsive HTML & CSS portfolio design.</p>
+        </div>
+
+        <div class="card">
+            <h3>Student Registration Form</h3>
+            <p>Clean & validated form using HTML.</p>
+        </div>
+
+        <div class="card">
+            <h3>Product Landing Page</h3>
+            <p>Modern UI with flexbox layout.</p>
+        </div>
+
+    </div>
+</section>
+
+<!-- Contact -->
+<section class="contact" id="contact">
+    <h2>Contact Me</h2>
+
+    <form class="contact-form">
+        <label>Full Name</label>
+        <input type="text" placeholder="Your Name" required>
+
+        <label>Email</label>
+        <input type="email" placeholder="Your Email" required>
+
+        <label>Message</label>
+        <textarea rows="4" placeholder="Your Message"></textarea>
+
+        <button type="submit">Send Message</button>
+    </form>
+</section>
+
+<!-- Footer -->
+<footer>
+    <p>© 2025 MyPortfolio | All Rights Reserved</p>
+</footer>
+
 </body>
 </html>
