--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -31,7 +31,7 @@
     </div>
 
     <div class="hero-image">
-        <img src="https://i.imgur.com/0y8Ftya.png" alt="Profile">
+        <img src="https://educatorpvabes.github.io/CSE-30-GIT-DEPLOY-PAGE/pic.jpg" alt="Profile">
     </div>
 </section>
 
