Changes the image address

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="hero-image">
-        <img src="https://educatorpvabes.github.io/CSE-30-GIT-DEPLOY-PAGE/pic.jpg" alt="Profile">
+        <img src="Photo.jpeg" alt="Profile">
     </div>
 </section>
 
