Changes the name

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <!-- Hero -->
 <section class="hero" id="home">
     <div class="hero-text">
-        <h1>Hello, I'm <span>Your Name</span></h1>
+        <h1>Hello, I'm <span>Nitin Bhardwaj</span></h1>
         <p>Aspiring Web Developer | HTML, CSS, GitHub</p>
         <button class="btn">Hire Me</button>
     </div>
