--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <form class="contact-form">
         <label>Full Name</label>
-        <input type="text" placeholder="Your Name" required>
+        <input type="text" placeholder="Your Name eg.Nitin" required>
 
         <label>Email</label>
         <input type="email" placeholder="Your Email" required>
