Adding more specifications

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 <!-- Footer -->
 <footer>
-    <p>© 2025 MyPortfolio | All Rights Reserved</p>
+    <p>© 2025 MyPortfolio | All Rights Reserved |Nitin Bhardwaj</p>
 </footer>
 
 </body>
