--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="logo">MyPortfolio</div>
     <nav>
         <ul class="nav-links">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="#home">Services</a></li>
+            <li><a href="#about">Works</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
