Text for the links changed

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <ul class="nav-links">
             <li><a href="#home">Services</a></li>
             <li><a href="#about">Works</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="#skills">Notes</a></li>
+            <li><a href="#projects">Experience</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
